# CH4rch_Market_Terminal

./: .gitignore  pyproject.toml  test_candle.py  test_dex.py  test_event_bus.py  test_market_event.py  test_providers.py  test_sqlite.py
backend/core/: config.py
configs/: application.yaml
scripts/: test_config.py
src/ch4rch_market/: __init__.py  __main__.py
src/ch4rch_market/core/: event_bus.py  events.py  exceptions.py  logger.py  settings.py
src/ch4rch_market/events/: base.py  market.py  provider.py
src/ch4rch_market/providers/: base.py
src/ch4rch_market/providers/binance/: provider.py
src/ch4rch_market/providers/dexscreener/: client.py  models.py  provider.py
src/ch4rch_market/storage/: sqlite_manager.py
src/ch4rch_market/storage/models/: candle.py
